Revise and Task: Add Pagination to getBooks of BookController and revise it according to relevant classes